# Ihgedas-Blockchain

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/error/: mod.rs
backend/src/models/: block.rs  blockchain.rs
backend/src/utilities/: mod.rs
frontend/: index.html  styles.css
