[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
chrono = "0.4.33"
clap = "4.4.18"
sha2 = "0.10.8"
log = "0.4.20"
env_logger = "0.11.1"
color-eyre = "0.6.2"